# Pingu-Music

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
.test-dist/src/recommendation/: index.js
.test-dist/tests/: artistMetadata.test.js  canonicalLyricsPolicy.test.js  coverUrlService.test.js  lmusicMapper.test.js  normalizationService.test.js  recommendationEngine.test.js  tagNormalization.test.js  trackCanonicalizationService.test.js
scripts/: sync-version.mjs  tauri-dev-server.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: artwork.rs  hitmos.rs  lmusic.rs  main.rs  secure_storage.rs  soundcloud.rs
src/app/: App.tsx  types.ts
src/app/bootstrap/: appBootstrap.ts  deferredStartup.ts
src/app/components/: AddToPlaylistModal.tsx  AppVersionBadge.tsx  BrandMark.tsx  CanonicalTrackList.tsx  EmptyState.tsx  LyricsModal.tsx  NowPlayingModal.tsx  PlayerBar.tsx  PlaylistCard.tsx  RecommendationPreview.tsx  SearchBar.tsx  Sidebar.tsx  TrackDetailsModal.tsx  TrackList.tsx  TrackRow.tsx
src/app/config/: app-version.json  appVersion.ts  canonicalizationConfig.ts
src/app/data/: tracks.ts
src/app/hooks/: useDebouncedValue.ts  (+1 more)
src/recommendation/: index.ts
src/styles/: tailwind.css  theme.css
tests/: artistMetadata.test.ts  canonicalLyricsPolicy.test.ts  coverUrlService.test.ts  lmusicMapper.test.ts  node-shims.d.ts  normalizationService.test.ts  recommendationEngine.test.ts  tagNormalization.test.ts  trackCanonicalizationService.test.ts
(+127 files in other folders)
