[package]
name = "pingu-music"
version = "0.1.0"
description = "Pingu Music desktop shell"
edition = "2021"

[package.metadata]
app = "pingu-music"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
urlencoding = "2.1"

[[bin]]
name = "pingu-music"
path = "src/main.rs"
